# task-master-api

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  deployment.md  docker-compose.yml  features.md  pyproject.toml
.github/workflows/: coverage.yml  deploy-prod.yml  lint.yml  test.yml
app/: crud.py  main.py  tests_setup.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 8ba98e4ed038_create_initial_tables.py
app/api/: dependencies.py  main.py
app/api/routes/: auth.py  tasks.py  utils.py
app/core/: config.py  database.py
app/models/: task.py  user.py
app/tests/: conftest.py
app/tests/api/routes/: test_auth.py  test_tasks.py
app/tests/crud/: test_user.py
app/tests/scripts/: test_db_setup.py  test_tests_setup.py
app/tests/utils/: task.py  user.py  utils.py
scripts/: prepare-test.sh  prepare.sh
